--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="http://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.css">
+    
+	  <script src="javascripts/bootstrap-radio/js/bootstrap-radio.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="javascripts/bootstrap-radio/css/bootstrap-radio.css">
+
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
     <title>Bootstrap-radio</title>
   </head>
 
@@ -40,11 +52,6 @@
 <a name="author" class="anchor" href="#author"><span class="octicon octicon-link"></span></a>Author</h2>
 
 <p><a href="https://github.com/montrezorro">Roberto Montresor</a></p>
-
-<h2>
-<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h2>
-
-<p>You can find demo and documentation <a href="http://montrezorro.github.io/bootstrap-radio">here</a>.</p>
 
 <h2>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
